<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_device">

    <fragment
        android:id="@+id/nav_device"
        android:name="com.iomt.android.ui.device.DeviceFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_device" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.iomt.android.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.iomt.android.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />
</navigation>